--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "nwidart/solicitation",
+    "name": "dvidev/solicitation-module",
+    "type": "laravel-module",
     "description": "",
     "authors": [
         {
-            "name": "Nicolas Widart",
-            "email": "n.widart@gmail.com"
+            "name": "Davi Menezes",
+            "email": "davimenezes.dev@gmail.com"
         }
     ],
     "extra": {
