--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
             "Modules\\Solicitation\\Database\\Seeders\\": "database/Seeders/",
             "Modules\\Solicitation\\Database\\Migrations\\": "database/Migrations/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Modules\\Builder\\Tests\\": "tests/"
+        }
     }
 }
