--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Modules\\Builder\\Tests\\": "tests/"
+            "Modules\\Solicitation\\Tests\\": "tests/"
         }
     }
 }
